welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:14: error: not found: value ecule
	ecule();recule()
        ^