welcome.lessons.welcome.variables.RunFour.scala.code
avance();avance();avance;avance();avance();avance();avance();avance();avance()
if(!estSurBiscuit){
	avance()
	
}
if(!estSurBiscuit){
	avance();avance()
}
if(!estSurBiscuit){
	avance()
}
if(!estSurBiscuit){
	ecule();recule()
}
